--- a/index.css
+++ b/index.css
@@ -1,8 +1,3 @@
-.me{
-    color: blueviolet;
-}
-
-.RAFI{
-    background-color: cadetblue;
-    border-radius: 20px;
+.rafi{
+    border: 2px solid red;
 }
